# paradise

./: .gitignore  README.md  docker-compose.yml
.desloppify/: query.json  review_batch_1.json  review_batch_1_v2.json  review_batch_2.json  review_batch_2_v2.json  review_batch_3.json  review_batch_3_v2.json  review_packet_blind.json  state-python.json  state-python.json.bak  state-typescript.json  state-typescript.json.bak
.desloppify/external_review_sessions/ext_20260302_132958_a89e1a6e/: canonical_import_20260302_135329.json  canonical_import_20260302_135351.json  claude_launch_prompt.md  review_result.json  (+3 more)
.desloppify/review_packets/: holistic_packet_20260302_132945.json  holistic_packet_20260302_132958.json  holistic_packet_20260302_141352.json
backend/: Dockerfile  conftest.py  pyproject.toml
backend/app/: broadcast.py  db.py  docker_ops.py  main.py
backend/app/routes/: agent_api.py  areas.py  canvas.py  chat.py  edges.py  events.py  helpers.py  node_network.py  node_status.py  nodes.py  security.py  workspace.py
backend/tests/: conftest.py  test_broadcast.py  test_db.py  test_docker_ops.py  test_helpers.py  test_main.py  test_routes_areas.py  test_routes_canvas.py  test_routes_chat.py  test_routes_node_status.py  test_routes_nodes.py
docs/: PARADISE_API.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/.desloppify/: query.json  state-typescript.json  state-typescript.json.bak
frontend/src/: types.ts
nanobot/: Dockerfile  server.py
nanobot-src/: .gitignore  pyproject.toml
(+136 files in other folders)
